tiny alignment fix to petition actions

--- a/app/assets/stylesheets/action_page.scss
+++ b/app/assets/stylesheets/action_page.scss
@@ -260,7 +260,7 @@
 
     }
     .tool-notice {
-      padding-bottom: 0.5rem;
+      padding: 0 1rem 0.5rem;
     }
     .btn-default[disabled="disabled"] {
       opacity: 0.7;
